--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -101,3 +101,7 @@ knife4j:
         api-rule: package
         api-rule-resources:
           - com.awsling.smartcode.controller
+
+# 代码沙箱配置
+codesandbox:
+  type: example
