--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://arch-server:3306/smart_code
-    username: awsling
-    password: awsling@123
+    url: jdbc:mysql://120.55.74.146:33306/onlinejudge
+    username: root
+    password: awsling@12345
   # Redis 配置
   # todo 需替换配置，然后取消注释
   #  redis:
@@ -104,4 +104,4 @@ knife4j:
 
 # 代码沙箱配置
 codesandbox:
-  type: example
+  type: remote
